--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,5 @@ after_success: ! '[ $TRAVIS_BRANCH = master ] && [ $TRAVIS_PULL_REQUEST = false 
   && ghp-import -n target/doc
   && git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages'
 
+# Use Travis container-based infrastructure
+sudo: false
