--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ env:
 # ghp-import python package
 after_success: ! '[ $TRAVIS_BRANCH = master ] && [ $TRAVIS_PULL_REQUEST = false ]
   && echo "<meta http-equiv=refresh content=0;url=fixedvec/index.html>" > target/doc/index.html
-  && sudo pip install ghp-import
+  && pip install --user ghp-import
   && ghp-import -n target/doc
   && git push -fq https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages'
 
