--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,16 @@
 name = "fixedvec"
 version = "0.1.0"
 authors = ["Nick Stevens <nick@bitcurry.com>"]
-license = "MIT"
+
+description = """
+A heapless version of the Rust vector type.
+"""
+
 repository = "https://github.com/nastevens/fixedvec-rs"
 homepage = "https://github.com/nastevens/fixedvec-rs"
 documentation = "http://nastevens.github.io/fixedvec-rs/"
-description = """
-A heapless implementation of the Rust vector.
-"""
+readme = "README.md"
+
+keywords = ["buffer", "vector", "no_std", "core", "heapless"]
+
+license = "MIT"
