--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ readme = "README.md"
 keywords = ["buffer", "vector", "no_std", "core", "heapless"]
 
 license = "MIT"
+
+[dependencies]
+libc = "0.2.11"
