Add travis.ci homu bot webhook
Signed-off-by: Nick Stevens <nick@bitcurry.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,3 +16,11 @@ script:
 
 # Use Travis container-based infrastructure
 sudo: false
+
+# Send notifications to homu bot
+notifications:
+    webhooks: http://rust-embedded-bot.herokuapp.com/travis
+
+branches:
+  only:
+    - auto
