--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,8 @@
 language: rust
 rust:
-  - 1.6.0
-  - 1.7.0
-  - 1.8.0
-  - 1.9.0
-  - 1.10.0
-  - 1.11.0
+  - 1.15.0
+  - 1.16.0
+  - stable
   - beta
   - nightly
 
