--- a/.travis.yml
+++ b/.travis.yml
@@ -24,9 +24,10 @@ install:
   - cargo -V
 
 script:
-  - cargo check --verbose --no-default-features
-  - cargo check --all --verbose
+  - cargo clean
+  - cargo build --all --verbose
   - cargo test --all --verbose
+  - rustdoc -L target/debug/deps --test README.md
   - cargo doc --all --no-deps
 
 cache:
